--- a/app/client/templates/modules/common/header.html
+++ b/app/client/templates/modules/common/header.html
@@ -1,9 +1,9 @@
 <template name="header">
   <div class="header module">
 	  <h1 class="title">
-      Meteor RTC
+      Meteor Hangouts
       <small class="sub title">
-        Prototype for testing RTC & Meteor
+        Prototype for testing Hangouts & Meteor
       </small>
     </h1>
 	</div>
