--- a/app/client/templates/modules/common/footer.html
+++ b/app/client/templates/modules/common/footer.html
@@ -1,9 +1,10 @@
 <template name="footer">
-  <div class="footer module">
-	  <p class="copyright">Built by
-      <a class="creator" href="http://damirvazgird.com" target="_blank">
-        Damir Vazgird
-      </a>
-    </p>
-	</div>
+    <div class="footer module">
+        <p class="copyright">
+            Get
+            <a class="creator" href="https://github.com/withpulp/mtr-hangouts" target="_blank">
+                Source
+            </a>
+        </p>
+    </div>
 </template>
