--- a/app/client/templates/head.html
+++ b/app/client/templates/head.html
@@ -2,6 +2,7 @@
     <title>Meteor Hangouts | Prototype</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"/>
     <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <!-- Remove body if using router -->
 <body>
