--- a/app/client/templates/head.html
+++ b/app/client/templates/head.html
@@ -5,5 +5,6 @@
 </head>
 <!-- Remove body if using router -->
 <body>
-{{> layout}}
+    <script src="//plus.google.com/hangouts/_/api/v1/hangout.js"></script>
+    {{> layout}}
 </body>
