simple hangout button event tied to test method

--- a/app/client/templates/views/root.html
+++ b/app/client/templates/views/root.html
@@ -1,5 +1,9 @@
 <template name="root">
     <div class="root view">
+        <g:hangout render="createhangout"></g:hangout>
+
+        <br />
+
         {{> simpleHangoutButton}}
     </div>
 </template>
