render function renders a button

--- a/app/client/templates/views/root.html
+++ b/app/client/templates/views/root.html
@@ -1,6 +1,6 @@
 <template name="root">
     <div class="root view">
-        <g:hangout render="createhangout"></g:hangout>
+        <!--<g:hangout render="createhangout"></g:hangout>-->
 
         <br />
 
