--- a/app/client/templates/views/root.html
+++ b/app/client/templates/views/root.html
@@ -1,5 +1,5 @@
 <template name="root">
     <div class="root view">
-        {{> simpleHangoutButton}}
+        {{> hangoutsWidgets}}
     </div>
 </template>
